Fix the index page layout on mobile

--- a/website/styles.css
+++ b/website/styles.css
@@ -92,10 +92,9 @@ footer {
   display: none;
 }
 /* We move the github icon down to be next to the page title. This CSS is a bit fragile
- * if the height of the h1 changes due to other style changegs. */
+ * if the height of the h1 changes due to other style changes. */
 #index-page nav {
   position: absolute;
-  width: var(--width);
   height: 80px; /* The empirical height of the h1 */
   margin: 0 auto;
   inset: 0; /* Center this absolutely positioned element. */
